foreman-plugins-pull-request - add foreman_bootdisk

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -58,5 +58,7 @@
     plugin:
       - foreman_ansible:
           repo: 'https://github.com/theforeman/foreman_ansible'
+      - foreman_bootdisk:
+          repo: 'https://github.com/theforeman/foreman_bootdisk'
     jobs:
       - '{plugin}-pull-request'
