foreman-plugins-pull-request - add foreman_digitalocean

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -60,5 +60,7 @@
           repo: 'https://github.com/theforeman/foreman_ansible'
       - foreman_bootdisk:
           repo: 'https://github.com/theforeman/foreman_bootdisk'
+      - foreman_digitalocean:
+          repo: 'https://github.com/theforeman/foreman-digitalocean'
     jobs:
       - '{plugin}-pull-request'
