foreman-plugins-pull-request - add foreman_discovery

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -62,5 +62,7 @@
           repo: 'https://github.com/theforeman/foreman_bootdisk'
       - foreman_digitalocean:
           repo: 'https://github.com/theforeman/foreman-digitalocean'
+      - foreman_discovery:
+          repo: 'https://github.com/theforeman/foreman_discovery'
     jobs:
       - '{plugin}-pull-request'
