foreman-plugins-pull-request - add foreman_docker

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -64,5 +64,7 @@
           repo: 'https://github.com/theforeman/foreman-digitalocean'
       - foreman_discovery:
           repo: 'https://github.com/theforeman/foreman_discovery'
+      - foreman_docker:
+          repo: 'https://github.com/theforeman/foreman-docker'
     jobs:
       - '{plugin}-pull-request'
