foreman-plugins-pull-request - add foreman_expire_hosts

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -66,5 +66,7 @@
           repo: 'https://github.com/theforeman/foreman_discovery'
       - foreman_docker:
           repo: 'https://github.com/theforeman/foreman-docker'
+      - foreman_expire_hosts:
+          repo: 'https://github.com/theforeman/foreman_expire_hosts'
     jobs:
       - '{plugin}-pull-request'
