foreman-plugins-pull-request - add foreman_host_extra_validator

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -68,5 +68,7 @@
           repo: 'https://github.com/theforeman/foreman-docker'
       - foreman_expire_hosts:
           repo: 'https://github.com/theforeman/foreman_expire_hosts'
+      - foreman_host_extra_validator:
+          repo: 'https://github.com/theforeman/foreman_host_extra_validator'
     jobs:
       - '{plugin}-pull-request'
