--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -70,5 +70,7 @@
           repo: 'https://github.com/theforeman/foreman_expire_hosts'
       - foreman_host_extra_validator:
           repo: 'https://github.com/theforeman/foreman_host_extra_validator'
+      - foreman_monitoring:
+          repo: 'https://github.com/theforeman/foreman_monitoring'
     jobs:
       - '{plugin}-pull-request'
