foreman-plugins-pull-request - add foreman_openscap

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -74,5 +74,7 @@
           repo: 'https://github.com/theforeman/foreman_monitoring'
       - foreman_omaha:
           repo: 'https://github.com/theforeman/foreman_omaha'
+      - foreman_openscap:
+          repo: 'https://github.com/theforeman/foreman_openscap'
     jobs:
       - '{plugin}-pull-request'
