foreman-plugins-pull-request - add foreman_pipeline

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -76,5 +76,7 @@
           repo: 'https://github.com/theforeman/foreman_omaha'
       - foreman_openscap:
           repo: 'https://github.com/theforeman/foreman_openscap'
+      - foreman_pipeline:
+          repo: 'https://github.com/theforeman/foreman_pipeline'
     jobs:
       - '{plugin}-pull-request'
