foreman-plugins-pull-request - add foreman_remote_execution

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -78,5 +78,7 @@
           repo: 'https://github.com/theforeman/foreman_openscap'
       - foreman_pipeline:
           repo: 'https://github.com/theforeman/foreman_pipeline'
+      - foreman_remote_execution:
+          repo: 'https://github.com/theforeman/foreman_remote_execution'
     jobs:
       - '{plugin}-pull-request'
