foreman-plugins-pull-request - add foreman_salt

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -80,5 +80,7 @@
           repo: 'https://github.com/theforeman/foreman_pipeline'
       - foreman_remote_execution:
           repo: 'https://github.com/theforeman/foreman_remote_execution'
+      - foreman_salt:
+          repo: 'https://github.com/theforeman/foreman_salt'
     jobs:
       - '{plugin}-pull-request'
