foreman-plugins-pull-request - add foreman-tasks

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -84,5 +84,7 @@
           repo: 'https://github.com/theforeman/foreman_salt'
       - foreman_setup:
           repo: 'https://github.com/theforeman/foreman_setup'
+      - foreman-tasks:
+          repo: 'https://github.com/theforeman/foreman-tasks'
     jobs:
       - '{plugin}-pull-request'
