foreman-plugins-pull-request - add foreman_templates

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -86,5 +86,7 @@
           repo: 'https://github.com/theforeman/foreman_setup'
       - foreman-tasks:
           repo: 'https://github.com/theforeman/foreman-tasks'
+      - foreman_templates:
+          repo: 'https://github.com/theforeman/foreman_templates'
     jobs:
       - '{plugin}-pull-request'
