--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -88,5 +88,9 @@
           repo: 'https://github.com/theforeman/foreman-tasks'
       - foreman_templates:
           repo: 'https://github.com/theforeman/foreman_templates'
+      - foreman_userdata:
+          repo: 'https://github.com/theforeman/foreman_userdata'
+      - puppetdb_foreman:
+          repo: 'https://github.com/theforeman/puppetdb_foreman'
     jobs:
       - '{plugin}-pull-request'
