foreman-plugins-pull-request - add foreman_omaha

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -72,5 +72,7 @@
           repo: 'https://github.com/theforeman/foreman_host_extra_validator'
       - foreman_monitoring:
           repo: 'https://github.com/theforeman/foreman_monitoring'
+      - foreman_omaha:
+          repo: 'https://github.com/theforeman/foreman_omaha'
     jobs:
       - '{plugin}-pull-request'
