--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
@@ -27,22 +27,19 @@
           name: ruby
           values:
             - '2.0.0'
-            - '2.1'
-            - '2.2'
             - '2.3'
+            - '2.4'
+            - '2.5'
       - axis:
           type: user-defined
           name: puppet
           values:
-            - '3.4.0'
             - '3.8.0'
             - '4.2.0'
-            - '4.4.0'
             - '4.10.0'
             - '5.0'
-            - '5.3.3'
     execution-strategy:
-      combination-filter: '!( (ruby ==~ /2\.[^0]*/ && puppet ==~ /3\.[0-4].*/) || (ruby ==~ /2\.[2-9].*/ && puppet ==~ /3.*/) || (ruby ==~ /2\.[3-9].*/ && puppet ==~ /4\.[0-3].*/) )'
+      combination-filter: '( ruby == "2.0.0" && puppet ==~ /[34]\..*/ ) || ( ruby == "2.3" && puppet == "4.10.0" ) || ( ruby ==~ /2\.[45].*/ && puppet == "5.0" )'
     wrappers:
       - timeout:
           type: absolute
