fix "Mysql2::Error: SELECT command denied to user [...]" error

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
@@ -41,9 +41,9 @@
 
           # Database environment
           (
-            sed "s/^test:/development:/; s/database:.*/database: ${{gemset}}-dev/" ${{HOME}}/${{database}}.db.yaml
+            sed "s/^test:/development:/; s/database:.*/database: test-${{gemset}}-dev/" ${{HOME}}/${{database}}.db.yaml
             echo
-            sed "s/database:.*/database: ${{gemset}}-test/" ${{HOME}}/${{database}}.db.yaml
+            sed "s/database:.*/database: test-${{gemset}}/" ${{HOME}}/${{database}}.db.yaml
           ) > ${{APP_ROOT}}/config/database.yml
 
           # Create DB first in development as migrate behaviour can change
