test_katello_rubocop - remove _temp suffix

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_rubocop.yml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_rubocop.yml
@@ -1,5 +1,5 @@
 - job:
-    name: test_katello_rubocop_temp
+    name: test_katello_rubocop
     description: |
       Run Katello Rubocop tests
     concurrent: true
