smart-proxy-plugin-pull-request - forgot to escape the brackets!

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -14,8 +14,8 @@
           wipe-workspace: true
           prune: true
           branches:
-            - '${ghprbActualCommit}'
-          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
+            - '${{ghprbActualCommit}}'
+          refspec: '+refs/pull/${{ghprbPullId}}/*:refs/remotes/origin/pr/${{ghprbPullId}}/*'
     triggers:
       - github_pr:
           context: 'smart-proxy-{plugin}'
