smart-proxy-plugin-pull-request - set context to be rubygem name

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -18,7 +18,7 @@
           refspec: '+refs/pull/${{ghprbPullId}}/*:refs/remotes/origin/pr/${{ghprbPullId}}/*'
     triggers:
       - github_pr:
-          context: 'smart-proxy-{plugin}'
+          context: 'smart_proxy_{plugin}'
     wrappers:
       - timeout:
           type: absolute
