--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-pc1-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-pc1-systest.yaml
@@ -1,6 +1,5 @@
 - job:
     name: foreman-puppet-pc1-systest
-    node: 'el && ipv6'
     project-type: matrix
     logrotate:
       daysToKeep: 8
@@ -14,6 +13,12 @@
           name: os
           values:
             - centos7
+      - axis:
+          type: slave
+          name: label
+          values:
+            - el
+            - ipv6
     builders:
       - systest:
           repo: nightly
