set 'and' on labels for systest family of jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-hammer-nightly-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-hammer-nightly-systest.yaml
@@ -15,11 +15,10 @@
           values:
             - centos7
       - axis:
-          type: slave
+          type: label-expression
           name: label
           values:
-            - el
-            - ipv6
+            - el&&ipv6
     builders:
       - systest:
           repo: nightly
