--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-umask-077-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-umask-077-systest.yaml
@@ -16,11 +16,10 @@
             - debian9
             - ubuntu1604
       - axis:
-          type: slave
+          type: label-expression
           name: label
           values:
-            - el
-            - ipv6
+            - el&&ipv6
     builders:
       - systest:
           repo: nightly
