--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
@@ -31,7 +31,7 @@
           rvm gemset empty --force
           gem install bundler --no-ri --no-rdoc
 
-          bundle install --without development --retry 5 --jobs 5
+          bundle install --without development --jobs=5 --retry=5
 
           # we need to install node modules for integration tests
           if [ -e "${{APP_ROOT}}/package.json" ]; then
@@ -59,7 +59,7 @@
           [ -e ${{PLUGIN_ROOT}}/gemfile.d/{plugin-name}.rb ] && cat ${{PLUGIN_ROOT}}/gemfile.d/{plugin-name}.rb >> bundler.d/Gemfile.local.rb
 
           # Update dependencies
-          bundle update --retry 5 --jobs 5
+          bundle update --jobs=5 --retry=5
 
           # If the plugin contains npm deps, we need to install its specific modules
           if [ -e "${{PLUGIN_ROOT}}/package.json" ]; then
