--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/smart-proxy-plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/smart-proxy-plugin.yaml
@@ -4,14 +4,17 @@
       - shell: |+
           #!/bin/bash -ex
 
+          set +x
           # RVM Ruby environment
           . /etc/profile.d/rvm.sh
-
           # Use a gemset unique to each executor to enable parallel builds
           gemset=$(echo ${JOB_NAME} | cut -d/ -f1)-${EXECUTOR_NUMBER}
           rvm use ruby-${ruby}@${gemset} --create
           rvm gemset empty --force
+          set -x
+
           gem install bundler --no-ri --no-rdoc
 
-          bundle install --retry 5
+          bundle install --retry 5 --jobs 5
           bundle exec rake TESTOPTS="-v"
+
