Use the correct branches selection for hammer-cli
Otherwise all branches are built.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli.yaml
@@ -14,7 +14,7 @@
           url: https://github.com/theforeman/hammer-cli
           per-build-tag: true
           wipe-workspace: true
-          branch:
+          branches:
             - master
     triggers:
       - github
