--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
@@ -3,6 +3,7 @@
     description: |
       Tests a Kafo Parsers pull request under each Ruby and Puppet configuration.
     concurrent: true
+    project-type: matrix
     logrotate:
       daysToKeep: 45
       numToKeep: -1
