test_katello_javascript wasn't updating from JJB
... because i forgot to set the project-type

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_javascript.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_javascript.yaml
@@ -1,6 +1,7 @@
 - job:
     name: test_katello_javascript
     description: 'Run Katello Javascript tests with coverage'
+    project-type: matrix
     logrotate:
       daysToKeep: 20
       numToKeep: -1
