pollscm's syntax was deprecated. now requires the `cron` key

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -51,7 +51,8 @@
     scm:
       - bastion
     triggers:
-      - pollscm: 'H/15 * * * *'
+      - pollscm:
+          cron: 'H/15 * * * *'
       - github
     axes:
       - axis:
