--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli.yaml
@@ -15,7 +15,8 @@
             - master
     triggers:
       - github
-      - pollscm: 'H/15 * * * *'
+      - pollscm:
+          cron: 'H/15 * * * *'
     axes:
       - axis:
           type: user-defined
