--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -39,7 +39,10 @@
           timeout_min: 120
     publishers:
       - trigger-parameterized-builds:
-        - project: 'release_push_deb, release_push_rpm'
+        - project: release_push_deb
+          condition: SUCCESS
+          current-parameters: true
+        - project: release_push_rpm
           condition: SUCCESS
           current-parameters: true
       - systest
