'workflow' project-type is depracated in favor of 'pipeline'

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
@@ -1,6 +1,6 @@
 - job:
     name: deploy_yum
-    project-type: workflow
+    project-type: pipeline
     parameters:
       - string:
           name: os
