--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
@@ -1,6 +1,6 @@
 - job:
     name: katello-installer-nightly-release
-    project-type: workflow
+    project-type: pipeline
     sandbox: false
     triggers:
       - timed: '0 22 * * *'
