--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tarballs-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tarballs-release.yaml
@@ -1,6 +1,6 @@
 - job:
     name: tarballs-release
-    project-type: workflow
+    project-type: pipeline
     parameters:
       - string:
           name: version
