--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
@@ -1,7 +1,7 @@
 ---
 - job:
     name: tfm-ror51-release
-    project-type: workflow
+    project-type: pipeline
     properties:
       - github:
           url: https://github.com/theforeman/tfm-ror51-packaging
