--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
@@ -1,7 +1,7 @@
 ---
 - job:
     name: tfm-ror51-cleanup-copr
-    project-type: workflow
+    project-type: pipeline
     properties:
       - github:
           url: https://github.com/theforeman/tfm-ror51-packaging
