--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-infra.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-infra.yaml
@@ -2,7 +2,7 @@
     name: foreman-infra
     scm:
       - git:
-          url: git://github.com/theforeman/foreman-infra.git
+          url: https://github.com/theforeman/foreman-infra.git
           wipe-workspace: false
           branches:
             - master
