--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/theforeman.org.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/theforeman.org.yaml
@@ -2,7 +2,7 @@
     name: theforeman.org
     scm:
       - git:
-          url: git://github.com/theforeman/theforeman.org.git
+          url: https://github.com/theforeman/theforeman.org.git
           wipe-workspace: true
           branches:
             - gh-pages
