--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -150,7 +150,7 @@
       - pr_parameters
       - string:
           name: foreman_pr_git_url
-          description: 'Foreman Git URL to PR to test, e.g. git://github.com/user/foo.git'
+          description: 'Foreman Git URL to PR to test, e.g. https://github.com/user/foo.git'
       - string:
           name: foreman_pr_git_ref
           description: 'Foreman Git ref for PR to test, usually the branch name.'
