--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_virt_who_configure.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_virt_who_configure.yaml
@@ -15,7 +15,7 @@
       - string:
           name: foreman_pr_git_url
           default:
-          description: 'Foreman it URL to PR to test, e.g. git://github.com/user/foo.git'
+          description: 'Foreman it URL to PR to test, e.g. https://github.com/user/foo.git'
       - string:
           name: foreman_pr_git_ref
           default:
