--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_katello.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_katello.yaml
@@ -11,7 +11,7 @@
     parameters:
       - string:
           name: plugin_repo
-          default: git://github.com/Katello/katello.git
+          default: https://github.com/Katello/katello.git
           description: "Git URL containing Katello, e.g. <pre>https://github.com/Katello/katello</pre>"
       - string:
           name: plugin_branch
