--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_assets_precompile.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_assets_precompile.yaml
@@ -20,7 +20,7 @@
       - string:
           name: foreman_pr_git_url
           description: |
-            Foreman Git URL to PR to test, e.g. git://github.com/user/foo.git
+            Foreman Git URL to PR to test, e.g. https://github.com/user/foo.git
       - string:
           name: foreman_pr_git_ref
           description: |
