--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_javascript.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_javascript.yaml
@@ -29,7 +29,7 @@
           description: 'GitHub PR number to merge, or a URL to patch file to apply directly.'
       - string:
           name: pr_git_url
-          description: 'Git URL to PR to test, e.g. git://github.com/user/foo.git'
+          description: 'Git URL to PR to test, e.g. https://github.com/user/foo.git'
       - string:
           name: pr_git_ref
           description: 'Git ref for PR to test, usually the branch name.'
