--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/parameters/pr_parameters.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/parameters/pr_parameters.yaml
@@ -8,7 +8,7 @@
       - string:
           name: pr_git_url
           default: 
-          description: 'Git URL to PR to test, e.g. git://github.com/user/foo.git'
+          description: 'Git URL to PR to test, e.g. https://github.com/user/foo.git'
       - string:
           name: pr_git_ref
           default: 
