--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-proxy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-proxy.yaml
@@ -2,6 +2,6 @@
     name: foreman-proxy
     scm:
       - git:
-          url: git://github.com/theforeman/smart-proxy.git
+          url: https://github.com/theforeman/smart-proxy.git
           branches:
             - '{branch}'
