--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-selinux.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-selinux.yaml
@@ -2,7 +2,7 @@
     name: foreman-selinux
     scm:
       - git:
-          url: git://github.com/theforeman/foreman-selinux.git
+          url: https://github.com/theforeman/foreman-selinux.git
           wipe-workspace: true
           branches:
             - '{branch}'
