--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
@@ -2,7 +2,7 @@
     name: foreman
     scm:
       - git:
-          url: git://github.com/theforeman/foreman.git
+          url: https://github.com/theforeman/foreman.git
           wipe-workspace: true
           branches:
             - '{branch}'
@@ -11,7 +11,7 @@
     name: foreman_pr
     scm:
       - git:
-          url: git://github.com/theforeman/foreman.git
+          url: https://github.com/theforeman/foreman.git
           wipe-workspace: true
           branches:
             - '${ghprbActualCommit}'
