--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman_plugin.yaml
@@ -2,7 +2,7 @@
     name: foreman_plugin
     scm:
       - git:
-          url: git://github.com/theforeman/{repo}.git
+          url: https://github.com/theforeman/{repo}.git
           wipe-workspace: false
           branches:
             - '{branch}'
