--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -5,6 +5,8 @@
       daysToKeep: 8
     block-downstream: true
     block-upstream: true
+    scm:
+      - forklift
     parameters:
       - release_parameters
     builders:
